# pdf-rust

./: Cargo.toml
examples/: example_01_hello_world.rs  example_02_text_styles.rs  example_03_shapes.rs  example_04_lines_and_strokes.rs  example_05_multipage.rs  example_06_custom_font.rs  example_07_image.rs  example_08_annotations.rs  example_09_invoice.rs  example_10_dashboard.rs  example_11_font_registry.rs  example_12_unicode.rs  example_13_password_protected.rs  example_15_rtl_text.rs  example_16_pdf_merge.rs  example_17_images_from_disk.rs  example_19_text_wrapping.rs  example_20_table.rs
src/: lib.rs
